Update README and comments

--- a/README.me
+++ b/README.me
@@ -1,1 +1,10 @@
-A Conway's Game of Life implementation in ASCII with Go
+# go-of-life
+
+An ASCII based [Conway's Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) implementation written in Go.
+
+## How to use
+
+Run the main file, you can pass it the with and height if you wish
+```shell
+$ go run main.go width height
+```
